@@ -1,19 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/multipledispatch/multipledispatch-0.4.4.ebuild,v 1.2 2014/08/09 06:55:20 idella4 Exp $
-
-EAPI="5"
-PYTHON_COMPAT=( python{2_7,3_2,3_3,3_4} )
-
-inherit distutils-r1
-
-DESCRIPTION="RESTful HTTP Content Negotiation for Flask, Bottle, web.py and webapp2"
-SRC_URI="mirror://pypi/${P:0:1}/${PN}/${P}.tar.gz"
-HOMEPAGE="http://pypi.python.org/pypi/mimerender"
-
-LICENSE="BSD"
-SLOT="0"
-KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux"
-
-RDEPEND="dev-python/mimeparse[${PYTHON_USEDEP}]"
-DEPEND="${RDEPEND}"
