@@ -1,9 +1,9 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/multipledispatch/multipledispatch-0.4.3.ebuild,v 1.1 2014/05/26 07:42:23 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/multipledispatch/multipledispatch-0.4.7.ebuild,v 1.1 2014/10/07 10:09:19 idella4 Exp $
 
 EAPI="5"
-PYTHON_COMPAT=( python{2_7,3_2,3_3} )
+PYTHON_COMPAT=( python{2_7,3_2,3_3,3_4} pypy )
 
 inherit distutils-r1
 
@@ -15,5 +15,5 @@ LICENSE="BSD"
 SLOT="0"
 KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux"
 
-RDEPEND="dev-python/mimeparse[${PYTHON_USEDEP}]"
-DEPEND="${RDEPEND}"
+RDEPEND=""
+DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]"
